Se agregó el logo y se ajustaron algunos estilos de la paginación

--- a/00-html-css/empleos.html
+++ b/00-html-css/empleos.html
@@ -4,14 +4,21 @@
 <head>
     <title>DevJobs - Empleos</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en DevJobs.">
+    <meta name="description" content="Listado con empleos y filtros para encontrar el trabajo de tus sueños.">
 
     <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 
 <body class="empleos">
     <header>
-        <h1>DevJobs</h1>
+        <h1>
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <polyline points="16 18 22 12 16 6"></polyline>
+                <polyline points="8 6 2 12 8 18"></polyline>
+            </svg>
+            DevJobs
+        </h1>
 
         <nav>
             <a href="index.html">Inicio</a>
@@ -103,7 +110,8 @@
                     <div>
                         <h3>Analista de Datos</h3>
                         <span>Data Driveen Co.</span> | <span>Ciudad de México</span>
-                        <p>Estamos buscandop un analista de datos con experiencia en el manejo de grandes conjuntos de datos y herramientas de visualización. Se requiere conocimiento en SQL, Python y R.</p>
+                        <p>Estamos buscandop un analista de datos con experiencia en el manejo de grandes conjuntos de
+                            datos y herramientas de visualización. Se requiere conocimiento en SQL, Python y R.</p>
                     </div>
                     <div>
                         <button type="submit">Aplicar</button>
@@ -114,7 +122,9 @@
                     <div>
                         <h3>Desarrollador de Aplicaciones Móviles</h3>
                         <span>Mobile Apps Ltd.</span> | <span>Guadalajara</span>
-                        <p>Buscamos un desarrollador de aplicaciones móviloes con experiencia en iOs y/o Android. El candidato debe tener conocimientos en Swift, Kotlin y el desarrollo de interfaces de usuario.</p>
+                        <p>Buscamos un desarrollador de aplicaciones móviloes con experiencia en iOs y/o Android. El
+                            candidato debe tener conocimientos en Swift, Kotlin y el desarrollo de interfaces de
+                            usuario.</p>
                     </div>
                     <div>
                         <button type="submit">Aplicar</button>
@@ -125,7 +135,9 @@
                     <div>
                         <h3>Ingeniero de DevOps</h3>
                         <span>Cloud Services SA</span> | <span>Remoto</span>
-                        <p>Estamos buscando un ingeniero de DevOps con experiencia en la gestión de infraestructuras en la nube, automatización  de procesos y herramientas de integración continua. Se requiere conocimiento en AWS, Azure o GCP.</p>
+                        <p>Estamos buscando un ingeniero de DevOps con experiencia en la gestión de infraestructuras en
+                            la nube, automatización de procesos y herramientas de integración continua. Se requiere
+                            conocimiento en AWS, Azure o GCP.</p>
                     </div>
                     <div>
                         <button type="submit">Aplicar</button>
@@ -139,12 +151,14 @@
 
             <nav aria-label="Navegación de páginas">
                 <ul class="pagination">
-                    <li class="page-item disabled"><a class="page-link" href="#" aria-label="Anterior"><span
-                                aria-hidden="true">&laquo;</span></a></li>
+                    <!-- <li class="page-item disabled"><a class="page-link" href="#" aria-label="Anterior"><span
+                                aria-hidden="true">&laquo;</span></a></li> -->
+                    <li class="page-item disabled"><a class="page-link" href="#"><span
+                            >&laquo;</span></a></li>
                     <li class="page-item active"><a class="page-link" href="#">1</a></li>
                     <li class="page-item"><a class="page-link" href="#">2</a></li>
                     <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">Siguiente</a></li>
+                    <li class="page-item"><a class="page-link" href="#"><span>&raquo;</span></a></li>
                 </ul>
             </nav>
         </section>
