Simplificación de la lógica de los filtros, creación de JSON, separación de js en módulos. Falta corrgir que el filtro tecnología no muestra los empleos que incluyen JS

--- a/01-javascript/empleos.html
+++ b/01-javascript/empleos.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Listado con empleos y filtros para encontrar el trabajo de tus sueños.">
 
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <script type="module" src="script.js"></script>
+    <script type="module" src="main.js"></script>
 </head>
 
 <body class="empleos">
@@ -40,7 +40,7 @@
 
             <p>Explora miles de oportunidades en el sector tecnológico</p>
 
-            <form role="search">
+            <form role="search" id="empleos-search-form">
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
@@ -50,18 +50,19 @@
                         <path d="M21 21l-6 -6" />
                     </svg>
 
-                    <input required type="text" name="busqueda"
+                    <input required type="text" name="busqueda" id="empleos-search-input"
                         placeholder="Buscar empleos por título, habilidad o empresa">
                 </div>
 
                 <div class="filters">
                     <select name="tecnologia" id="filter-technology">
-                        <option value="">Tecnología</option>
+                          <option value="">Tecnología</option>
                         <option value="javascript">JavaScript</option>
-                        <option value="python">Python</option>
-                        <option value="java">Java</option>
                         <option value="react">React</option>
                         <option value="nodejs">Node.js</option>
+                        <hr>
+                        <option value="java">Java</option>
+                        <option value="python">Python</option>
                     </select>
 
                     <select name="ubicacion" id="filter-location">
@@ -70,7 +71,12 @@
                         <option value="cdmx">Ciudad de México</option>
                         <option value="guadalajara">Guadalajara</option>
                         <option value="monterrey">Monterrey</option>
+                        <option value="bogota">Bogotá</option>
+                        <option value="lima">Lima</option>
+                        <option value="santiago">Santiago</option>
                         <option value="barcelona">Barcelona</option>
+                        <option value="madrid">Madrid</option>
+                        <option value="valencia">valencia</option>
                     </select>
 
                     <!-- <select name="tipo_contrato" id="filter-contract">
@@ -83,7 +89,7 @@
                     <select name="nivel_experiencia" id="filter-experience">
                         <option value="">Nivel de experiencia</option>
                         <option value="junior">Junior</option>
-                        <option value="mid">Mid-level</option>
+                        <option value="mid-level">Mid-level</option>
                         <option value="senior">Senior</option>
                         <option value="lead">Lead</option>
                     </select>
@@ -98,60 +104,7 @@
                 <h2>Resultados de búsqueda</h2>
             </header>
             <div class="jobs-listings">
-                <article class="resultado job-listing-card" data-tecnologia="javascript,react,nodejs" data-ubicacion="remoto"
-                     data-nivel_experiencia="senior">
-                    <div onclick="window.location.href='detalle-empleo.html'" style="cursor:pointer;">
-                        <h3>Ingeniero de Software</h3>
-                        <span>Tech Solutions Inc</span> | <span>Remoto</span>
-                        <p>Buscamos ingeniero de software con experiencia en desarrollo web y conocimientos en
-                            JavaScript, React y Node js. El candidato ideal debe ser capaz de trabajar en equipo y tener
-                            buenas habilidades de comunicación.</p>
-                    </div>
-                    <div>
-                        <button type="submit" class="button-apply-job">Aplicar</button>
-                    </div>
-                </article>
 
-                <article class="resultado job-listing-card" data-tecnologia="python" data-ubicacion="cdmx"
-                     data-nivel_experiencia="mid">
-                    <div>
-                        <h3>Analista de Datos</h3>
-                        <span>Data Driveen Co.</span> | <span>Ciudad de México</span>
-                        <p>Estamos buscandop un analista de datos con experiencia en el manejo de grandes conjuntos de
-                            datos y herramientas de visualización. Se requiere conocimiento en SQL, Python y R.</p>
-                    </div>
-                    <div>
-                        <button type="submit" class="button-apply-job">Aplicar</button>
-                    </div>
-                </article>
-
-                <article class="resultado job-listing-card" data-tecnologia="" data-ubicacion="guadalajara"
-              data-nivel_experiencia="senior">
-                    <div>
-                        <h3>Desarrollador de Aplicaciones Móviles</h3>
-                        <span>Mobile Apps Ltd.</span> | <span>Guadalajara</span>
-                        <p>Buscamos un desarrollador de aplicaciones móviloes con experiencia en iOs y/o Android. El
-                            candidato debe tener conocimientos en Swift, Kotlin y el desarrollo de interfaces de
-                            usuario.</p>
-                    </div>
-                    <div>
-                        <button type="submit" class="button-apply-job">Aplicar</button>
-                    </div>
-                </article>
-
-                <article class="resultado job-listing-card" data-tecnologia="" data-ubicacion="remoto"
-              data-nivel_experiencia="lead">
-                    <div>
-                        <h3>Ingeniero de DevOps</h3>
-                        <span>Cloud Services SA</span> | <span>Remoto</span>
-                        <p>Estamos buscando un ingeniero de DevOps con experiencia en la gestión de infraestructuras en
-                            la nube, automatización de procesos y herramientas de integración continua. Se requiere
-                            conocimiento en AWS, Azure o GCP.</p>
-                    </div>
-                    <div>
-                        <button type="submit" class="button-apply-job">Aplicar</button>
-                    </div>
-                </article>
             </div>
 
         </section>
