--- a/01-javascript/detalle-empleo.html
+++ b/01-javascript/detalle-empleo.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Listado con empleos y filtros para encontrar el trabajo de tus sueños.">
 
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <script type="module" src="script.js"></script>
+    <script type="module" src="main.js"></script>
 </head>
 
 <body class="empleos">
