Se agregó la lógica del buscador, se corrigió el filtro de tecnología ya que no mostraba correctamente los trabajos con más de una tecnología aunque el filtro coincidiera con uno de ellos. Se agregó el componente web avatar. Se implementó parte de la lógica de la paginación que muestra tres resultados por página y genera dinámicamente los botones del paginador. No funciona el cambio de página ni se muestra la flecha para avanzar

--- a/01-javascript/empleos.html
+++ b/01-javascript/empleos.html
@@ -28,7 +28,8 @@
 
         <div>
             <a href="">Subir CV</a>
-            <a href=""><img src="assets/images/user.webp" alt="user" title="user"></a>
+            <!-- <a href=""><img src="assets/images/user.webp" alt="user" title="user"></a> -->
+             <dev-jobs-avatar></dev-jobs-avatar>
         </div>
     </header>
 
@@ -56,13 +57,16 @@
 
                 <div class="filters">
                     <select name="tecnologia" id="filter-technology">
-                          <option value="">Tecnología</option>
+                        <option value="">Tecnología</option>
                         <option value="javascript">JavaScript</option>
                         <option value="react">React</option>
+                        <option value="typescript">TypeScript</option>
                         <option value="nodejs">Node.js</option>
                         <hr>
                         <option value="java">Java</option>
                         <option value="python">Python</option>
+                        <hr>
+                        <option value="mobile">Mobile</option>
                     </select>
 
                     <select name="ubicacion" id="filter-location">
@@ -76,7 +80,7 @@
                         <option value="santiago">Santiago</option>
                         <option value="barcelona">Barcelona</option>
                         <option value="madrid">Madrid</option>
-                        <option value="valencia">valencia</option>
+                        <option value="valencia">Valencia</option>
                     </select>
 
                     <!-- <select name="tipo_contrato" id="filter-contract">
@@ -100,7 +104,7 @@
 
         <section>
 
-            <header>
+            <header class="job-listings-header">
                 <h2>Resultados de búsqueda</h2>
             </header>
             <div class="jobs-listings">
@@ -126,7 +130,7 @@
     </main>
 
     <footer>
-        <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
+        <small>&copy; 2025 DevJobs. Todos los derechos reservados | Grecia Mendieta 'greysmpich'.</small>
     </footer>
 
 
