--- a/01-javascript/index.html
+++ b/01-javascript/index.html
@@ -49,7 +49,7 @@
             <path d="M21 21l-6 -6" />
           </svg>
 
-          <input required type="text" placeholder="Buscar empleos por título, habilidad o empresa">
+          <input required type="text" name="busqueda" placeholder="Buscar empleos por título, habilidad o empresa" id="empleos-search-input">
 
           <button type="submit">Buscar</button>
         </div>
@@ -128,7 +128,7 @@
   </main>
 
   <footer>
-    <small>&copy; 2025 DevJobs. Todos los derechos reservados.</small>
+    <small>&copy; 2025 DevJobs. Todos los derechos reservados | Grecia Mendieta 'greysmpich'.</small>
   </footer>
 
 
