Se migró el proyecto a React. Funcionan los filtros, se añadió un filtro por contrato, y la barra de búsqueda

--- a/02.2-react/index.html
+++ b/02.2-react/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
+    <title>DevJobs - Empleos</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>02.2-react</title>
-  </head>
-  <body>
+    <meta name="description" content="Listado con empleos y filtros para encontrar el trabajo de tus sueños.">
+
+    <link rel="stylesheet" href="assets/css/styles.css" />
+</head>
+  <body class="empleos">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
